work on layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,13 @@
   background-color: #f4b1a8ff;
 }
 
+#container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex: 1;
+}
+
 @media (max-width: 650px) {
   .toggleButton {
     display: flex;
@@ -150,6 +157,13 @@
     width: 100%;
     height: max-content;
     background-color: #f4b1a8ff;
+  }
+
+  #container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex: 0;
   }
 }
 
